# newapi-checkin

./: .gitignore  ACCOUNTS.example.json  LICENSE  README.md  accounts_store.py  checkin.py  checkin_challenge.js  collector.js  config.py  manage_accounts.py  mask_utils.py  pyproject.toml  run__all_checkin.py  run_all_checkin.bat
.github/workflows/: auto_checkin.yml
browser/: __init__.py  bypass.py  oauth_providers.py  poc_oauth.py  popups.py  script_helpers.py  script_runner.py  session.py  state.py
ci/: detect_browser.py  patch_playwright.py  report.py  setup_proxy.sh  stop_proxy.sh
providers/: __init__.py  auth.py  base.py
providers/actions/: __init__.py  _common.py  api.py  browser_script.py  relogin.py  visit.py
providers/profiles/: __init__.py  newapi.py  sub2api.py
scripts/checkin/: 100xlabs.py  jisudeng.py
tests/: test_100xlabs_script.py  test_actions.py  test_browser_safety.py  test_browser_script_fallback.py  test_http.py  test_jisudeng_script.py  test_oauth_domains.py  test_patch_playwright.py  test_security_output.py  test_storage.py  test_sub2api.py  test_worker_protocol.py
