[project]
name = "checkin"
version = "1.0.0"
description = "公益站自动签到（New API / Sub2API）"
requires-python = ">=3.11"
dependencies = [
    "camoufox[geoip]==0.4.11",
    "playwright-captcha==0.1.5",
]

[project.optional-dependencies]
gui = ["PySide6==6.11.1"]
dev = [
    "pytest==8.4.2",
    "ruff==0.15.21",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
